update Id database for restaurants

--- a/CodeProject/views/index.hbs
+++ b/CodeProject/views/index.hbs
@@ -1,2 +1,31 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<nav>
+    <h2>CityEasier</h2>
+    <ul>
+        <li>Home</li>
+        <li>Sign up</li>
+        <li><a href="/logIn">Log in</a> </li>
+    </ul>
+</nav>
+
+
+
+<div>
+    <h2>Make your stay Easier</h2>
+    <input type="text" name="search">
+</div>
+
+<div class="list-cities">
+
+    <a href="">Barcelona</a>
+    <a href="">London</a>
+    <a href="">Naples</a>
+
+</div>
+
+<footer>
+
+    <h3>Copyright</h3>
+    <p>Michal</p>
+    <p>Romero</p>
+
+</footer>
