Start to manage the views and the routes

--- a/CodeProject/views/city.hbs
+++ b/CodeProject/views/city.hbs
@@ -1,1 +1,16 @@
 {{!--  --}}
+
+<h2>Cities</h2>
+
+<a href="/placetype/restaurants">Restaurantes</a>
+<a href="/placetype/museums">museums</a>
+<a href="/placetype/events">Events</a>
+<a href="/placetype/hotels">Hotels</a>
+
+
+
+{{#each city}}
+
+    <h2>{{this.name}}</h2>
+
+{{/each}}
