--- a/CodeProject/views/index.hbs
+++ b/CodeProject/views/index.hbs
@@ -1,9 +1,9 @@
 <nav>
     <h2>CityEasier</h2>
     <ul>
-        <li>Home</li>
-        <li>Sign up</li>
-        <li><a href="/logIn">Log in</a> </li>
+        <li> <a href="/"> Home</a></li>
+        <li><a href="auth/signup">Sign up</a></li>
+        <li><a href="auth/login">Log in</a> </li>
     </ul>
 </nav>
 
@@ -16,9 +16,10 @@
 
 <div class="list-cities">
 
-    <a href="">Barcelona</a>
-    <a href="">London</a>
-    <a href="">Naples</a>
+    <a href="city/barcelona">Barcelona</a>
+    <a href="city/london">London</a>
+    <a href="city/naples">Naples</a>
+    <a href="city/paris">Paris</a>
 
 </div>
 
