--- a/CodeProject/views/auth/signup.hbs
+++ b/CodeProject/views/auth/signup.hbs
@@ -1,1 +1,21 @@
 <h1>Sing up</h1>
+
+<form action='/auth/signup' method='POST'>
+
+    <label for=''>Username</label>
+    <input type='text' name='username'>
+
+    <label for=''>Email</label>
+    <input type='email' name='email'>
+
+    <label for=''>Password</label>
+    <input type='password' name='password'>
+
+    <button type='submit'>Submit</button>
+</form>
+
+{{!-- error message display --}}
+
+{{#if errorMessage}}
+<div class="error-message">{{ errorMessage }}</div>
+{{/if}}
