Trying to do popoulate with restaurants in city file

--- a/CodeProject/views/city.hbs
+++ b/CodeProject/views/city.hbs
@@ -9,8 +9,12 @@
 
 
 
-{{#each city}}
+{{#each arrayREstaurantCollection}}
 
-    <h2>{{this.name}}</h2>
+<h2>{{this.restaurants.[0].name}}</h2>
 
+<h3>Restaurantes</h3>
+<h3>Museums</h3>
+<h3>Events</h3>
+<h3>Hotels</h3>
 {{/each}}
