take value of the city and render the page city with categories

--- a/CodeProject/views/city.hbs
+++ b/CodeProject/views/city.hbs
@@ -1,6 +1,6 @@
 {{!--  --}}
 
-<h2>Cities</h2>
+<h2>you are in {{city.[0].name}}</h2>
 
 <a href="/placetype/restaurants">Restaurantes</a>
 <a href="/placetype/museums">museums</a>
@@ -11,7 +11,7 @@
 
 {{#each arrayREstaurantCollection}}
 
-<h2>{{this.restaurants.[0].name}}</h2>
+{{!-- <h2>{{this.restaurants.[0].name}}</h2> --}}
 
 <h3>Restaurantes</h3>
 <h3>Museums</h3>
