we need to know why path to images not working, and try to solve populate

--- a/CodeProject/views/placeType.hbs
+++ b/CodeProject/views/placeType.hbs
@@ -1,14 +1,20 @@
-
 {{!-- Here will be the page that is in a city and show the category --> nombre barcelona y datos categoria --}}
 
-<h2>Place Type page</h2>
+{{!-- <h2>Place Type page {{city.[0].name}}</h2> --}}
 
- {{!-- {{#each listaCategoria}} --}}
+<h2>Place Type page {{detailRestaurant}}</h2>
 
-<li><a href="/singleplace/placename">nombre de place</a></li>
-<li><a href="/singleplace/placename">nombre de place</a></li>
-<li><a href="/singleplace/placename">nombre de place</a></li>
-<li><a href="/singleplace/placename">nombre de place</a></li>
-<li><a href="/singleplace/placename">nombre de place</a></li>
+<h2>Place Type page {{detailMuseum}}</h2>
 
-{{!-- {{/each}} --}}
+{{#each detailRestaurant}}
+
+<li><a href="/singleplace/placename">{{this.restaurants}}</a></li>
+
+{{/each}}
+
+
+{{#each detailMuseum}}
+
+<li><a href="/singleplace/placename">{{this.museums}}</a></li>
+
+{{/each}}
