--- a/CodeProject/views/singlePlace.hbs
+++ b/CodeProject/views/singlePlace.hbs
@@ -3,8 +3,10 @@
 <p>Here is going to be on the details from a restaurant or museum orevent or hotel</p>
 <div>
 
-    <h2>{{this.name}}</h2>
-    <h3>{{this.rating}}</h3>
+    <h2>{{restaurant.[0].name}}</h2>
+
+
+    <img src="{{restaurant.[0].img}}" alt="">
 
 
 </div>
