--- a/CodeProject/views/city.hbs
+++ b/CodeProject/views/city.hbs
@@ -2,10 +2,10 @@
 
 <h2>you are in {{city.[0].name}}</h2>
 
-<a href="/placetype/restaurants">Restaurantes</a>
-<a href="/placetype/museums">museums</a>
-<a href="/placetype/events">Events</a>
-<a href="/placetype/hotels">Hotels</a>
+<a href="/placetype/{{city.[0].name}}/restaurants">Restaurantes</a>
+<a href="/placetype/{{city.[0].name}}/museums">museums</a>
+<a href="/placetype/{{city.[0].name}}/events">Events</a>
+<a href="/placetype/{{city.[0].name}}/hotels">Hotels</a>
 
 
 
