--- a/CodeProject/views/layout.hbs
+++ b/CodeProject/views/layout.hbs
@@ -6,6 +6,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <h2>CityEasier</h2>
+    <ul>
+        <li> <a href="/"> Home</a></li>
+        <li><a href="auth/signup">Sign up</a></li>
+        <li><a href="auth/login">Log in</a> </li>
+    </ul>
+</nav>
+
+
     {{{body}}}
+
+
+    <footer class="footer-copyright text-center py-3">
+
+    <h3>Copyright</h3>
+    <p>Michal</p>
+    <p>Romero</p>
+
+</footer>
   </body>
 </html>
