--- a/CodeProject/views/auth/login.hbs
+++ b/CodeProject/views/auth/login.hbs
@@ -9,6 +9,7 @@
     <input type='password' name='password'>
 
     <button type='submit'>LOGIN</button>
+    {{!-- coment test --}}
 
     <p class="account-message">
         Don't have an account? <a href="/signup">Sign up</a>
