show all restaurants in a city

--- a/CodeProject/views/placeType.hbs
+++ b/CodeProject/views/placeType.hbs
@@ -1,46 +1,19 @@
-{{!-- Here will be the page that is in a city and show the category --> nombre barcelona y datos categoria --}}
-
-{{!-- <h2>Place Type page {{city.[0].name}}</h2> --}}
-
-<h2>Tipo array: {{detailRestaurant}}</h2>
-
-<h4>Name restaurant: {{detailRestaurant.[0].restaurants.[0].name}}</h4>
-<h4>Name restaurant: {{detailRestaurant.[0].restaurants.[0].type}}</h4>
-
-{{!-- .[0].restaurants --}}
-{{#each detailRestaurant}}
+{{!-- In this page that is in a city and show the category --> nombre barcelona y datos categoria --}}
 
 
-    <img src="{{this.restaurants.[0].img}}" alt="Photo of restaurant">
-    <h3><a href="">Name: {{this.restaurants.[0].name}}</a></h3>
-    <p>Rating : {{this.restaurants.[0].rating}}</p>
-    <p>Type cuisine :  {{this.restaurants.[0].type}}</p>
-    <p>City: {{this.restaurants.[0].contact.address}}</p>
+<h3>Tipo array: {{arrayRestaurantInCity.[0].contact.address}}</h3>
+<br>
 
+
+{{!-- For each restaurant in Barcelona we will have all the information below --}}
+{{#each arrayRestaurantInCity}}
+
+    <h2><a href="">Name: {{this.name}}</a></h2>
+    <img src="{{this.img}}" alt="Photo of restaurant">
+    <h4>Rating : {{this.rating}}</h4>
+    <h4>Type cuisine :  {{this.type}}</h4>
+    <h4>City: {{this.contact.address}}</h4>
+    <br>
 
 {{/each}}
 
-{{!-- <h2>Place Type page {{detailRestaurant.[0].restaurants.[0]}}</h2> --}}
-
-{{!-- <h2>Place Type page {{detailMuseum}}</h2> --}}
-
-{{!-- {{#each detailRestaurant}}
-
-<h3><a href="{{this.restaurants}}">Name of restaurant</a></h3>
-
-<div class="one-restaurant"> 
-    <img src="" alt="Photo of restaurant">
-    <h3><a href="/singleplace/placename">Name of restaurant</a></h3>
-    <p>Rating : </p>
-    <p>Type cuisine :</p>
-    <p>City: </p>
-</div>
-
-{{/each}}
-
-
-{{#each detailMuseum}}
-
-<li><a href="/singleplace/placename">{{this.museums}}</a></li>
-
-{{/each}} --}}
