--- a/CodeProject/views/private/edit.hbs
+++ b/CodeProject/views/private/edit.hbs
@@ -1,6 +1,7 @@
+<div class="signup-wrapper"></div>
 <h1>Edit account</h1>
 
-<form action='/private/edit' method='POST'>
+<form class="signup-form" action='/private/edit' method='POST'>
 
     {{!-- <img src="" alt="">
     <button>Change photo</button> --}}
@@ -19,6 +20,7 @@
 
     <button type='submit'>Save</button>
 </form>
+</div>
 
 {{!-- error message display --}}
 
