--- a/CodeProject/public/stylesheets/style.css
+++ b/CodeProject/public/stylesheets/style.css
@@ -7,7 +7,8 @@ a {
   color: #00B7FF;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -16,20 +17,101 @@ html, body {
 }
 
 #main {
-  overflow:auto;
-  padding-bottom:150px; /* this needs to be bigger than footer height*/
+  overflow: auto;
+  padding-bottom: 150px;
+  /* this needs to be bigger than footer height*/
 }
 
-.footer {
-  position: relative;
-  margin-top: -150px; /* negative value of footer height */
-  height: 150px;
-  clear:both;
-  padding-top:20px;
-} 
+footer p {
+  font-size: 1.6rem;
+  text-align: center;
+  line-height: 2.4rem;
+  margin: 30px auto 10px;
+}
 
-.list-cities{
+
+
+
+/* INDEX/HOME */
+.list-cities {
   display: flex;
   flex-direction: column;
   height: 50vh;
 }
+
+.home-search {
+  font-size: 2.6rem;
+  text-align: center;
+  padding: 3rem 5rem;
+}
+
+.home-search h2 {
+  margin: 5rem auto;
+}
+
+.home-search input {
+  background-color: rgb(204, 224, 243);
+}
+
+
+/* SIGNUP VIEW */
+.signup-wrapper h1 {
+  font-size: 3rem;
+  color: #175d79;
+  text-align: center;
+}
+
+.signup-wrapper {
+  font-family: 'Montserrat', sans-serif;
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-content: space-between;
+}
+
+.signup-form {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-content: space-between;
+  text-align: center;
+}
+
+.signup-form label,
+.signup-form input {
+  display: block;
+  font-size: 3rem;
+  line-height: 3rem;
+  margin-bottom: 6rem;
+}
+
+.signup-form input {
+  border: 2px solid blue;
+  border-radius: 10px;
+}
+
+.signup-form button {
+  font-size: 3rem;
+
+  color: #175d79;
+  text-decoration: none;
+  display: inline-block;
+
+  text-transform: uppercase;
+  padding: 0.5em 2em;
+  border: 2px solid #175d79;
+  transition: .02s .2s cubic-bezier(.1, 0, .1, 1);
+
+}
+
+.signup-form p {
+  font-size: 2rem;
+
+}
+
+
+
+
+footer {}
