--- a/CodeProject/views/index.hbs
+++ b/CodeProject/views/index.hbs
@@ -1,6 +1,4 @@
-
-
-<div class="">
+<div class="home-search">
     <h2>Make your stay Easier</h2>
     <input type="text" name="search">
     <br>
@@ -10,9 +8,8 @@
 
     {{#each allCitiesFromDB}}
     <li>
-    <a href="city/{{this.name}}">{{this.name}}</a>
+        <a href="city/{{this.name}}">{{this.name}}</a>
     </li>
     {{/each}}
 
 </div>
-
