--- a/CodeProject/views/city.hbs
+++ b/CodeProject/views/city.hbs
@@ -1,5 +1,5 @@
 {{!--  --}}
-
+<div class="city-wrapper">
 <h2>You are in {{city.[0].name}}</h2>
 
 
@@ -9,3 +9,4 @@
 <h3><a href="/placetype/{{city.[0].name}}/museums">museums</a></h3>
 <h3><a href="/placetype/{{city.[0].name}}/events">Events</a></h3>
 <h3><a href="/placetype/{{city.[0].name}}/hotels">Hotels</a></h3>
+</div>
