populate for each category

--- a/CodeProject/views/placeType.hbs
+++ b/CodeProject/views/placeType.hbs
@@ -11,9 +11,43 @@
     <h2><a href="">Name: {{this.name}}</a></h2>
     <img src="{{this.img}}" alt="Photo of restaurant">
     <h4>Rating : {{this.rating}}</h4>
-    <h4>Type cuisine :  {{this.type}}</h4>
+    <h4>Type :  {{this.type}}</h4>
     <h4>City: {{this.contact.address}}</h4>
     <br>
 
 {{/each}}
 
+{{#each arrayMuseumInCity}}
+
+    <h2><a href="">Name: {{this.name}}</a></h2>
+    <img src="{{this.img}}" alt="Photo of restaurant">
+    <h4>Rating : {{this.rating}}</h4>
+    <h4>Type:  {{this.type}}</h4>
+    <h4>City: {{this.contact.address}}</h4>
+    <br>
+
+{{/each}}
+
+
+{{#each arrayEventInCity}}
+
+    <h2><a href="">Name: {{this.name}}</a></h2>
+    <img src="{{this.img}}" alt="Photo of restaurant">
+    <h4>Rating : {{this.rating}}</h4>
+    <h4>Type:  {{this.type}}</h4>
+    <h4>City: {{this.contact.address}}</h4>
+    <br>
+
+{{/each}}
+
+
+{{#each arrayHotelInCity}}
+
+    <h2><a href="">Name: {{this.name}}</a></h2>
+    <img src="{{this.img}}" alt="Photo of restaurant">
+    <h4>Rating : {{this.rating}}</h4>
+    <h4>Type  :  {{this.type}}</h4>
+    <h4>City: {{this.contact.address}}</h4>
+    <br>
+
+{{/each}}
