update version of typePlaces

--- a/CodeProject/views/placeType.hbs
+++ b/CodeProject/views/placeType.hbs
@@ -17,6 +17,7 @@
 
 {{/each}}
 
+{{!-- For each museum in Barcelona we will have all the information below --}}
 {{#each arrayMuseumInCity}}
 
     <h2><a href="">Name: {{this.name}}</a></h2>
@@ -28,7 +29,7 @@
 
 {{/each}}
 
-
+{{!-- For each event in Barcelona we will have all the information below --}}
 {{#each arrayEventInCity}}
 
     <h2><a href="">Name: {{this.name}}</a></h2>
@@ -40,7 +41,7 @@
 
 {{/each}}
 
-
+{{!-- For each hotel in Barcelona we will have all the information below --}}
 {{#each arrayHotelInCity}}
 
     <h2><a href="">Name: {{this.name}}</a></h2>
