--- a/CodeProject/views/layout.hbs
+++ b/CodeProject/views/layout.hbs
@@ -3,6 +3,7 @@
 
 <head>
   <title>{{title}}</title>
+  <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
