--- a/CodeProject/views/placeType.hbs
+++ b/CodeProject/views/placeType.hbs
@@ -1,19 +1,23 @@
 {{!-- In this page that is in a city and show the category --> nombre barcelona y datos categoria --}}
 
-
-<h3>Tipo array: {{arrayRestaurantInCity.[0].contact.address}}</h3>
-<br>
-
-
-{{!-- For each restaurant in Barcelona we will have all the information below --}}
-{{#each arrayRestaurantInCity}}
-
-    <h2><a href="">Name: {{this.name}}</a></h2>
-    <img src="{{this.img}}" alt="Photo of restaurant">
-    <h4>Rating : {{this.rating}}</h4>
-    <h4>Type cuisine :  {{this.type}}</h4>
-    <h4>City: {{this.contact.address}}</h4>
+<div class="place-type-wrapper">
+    <h3>Tipo array: {{arrayRestaurantInCity.[0].contact.address}}</h3>
     <br>
 
-{{/each}}
 
+    {{!-- For each restaurant in Barcelona we will have all the information below --}}
+
+    {{#each arrayRestaurantInCity}}
+    <div class="place-type-one">
+        <img src="{{this.img}}" alt="Photo of restaurant">
+        <div class="place-description">
+            <h4><a href="">Name: {{this.name}}</a></h4>
+            <p>Rating : {{this.rating}}</p>
+            <p>Type cuisine : {{this.type}}</p>
+            <p>City: {{this.contact.address}}</p>
+            <br>
+        </div>
+    </div>
+    {{/each}}
+
+</div>
