single place done it for restaurants

--- a/CodeProject/views/placeType.hbs
+++ b/CodeProject/views/placeType.hbs
@@ -8,7 +8,7 @@
 {{!-- For each restaurant in Barcelona we will have all the information below --}}
 {{#each arrayRestaurantInCity}}
 
-    <h2><a href="">Name: {{this.name}}</a></h2>
+    <h2><a href="/singleplace/{{this.name}}">Name: {{this.name}}</a></h2>
     <img src="{{this.img}}" alt="Photo of restaurant">
     <h4>Rating : {{this.rating}}</h4>
     <h4>Type :  {{this.type}}</h4>
@@ -44,7 +44,7 @@
 {{!-- For each hotel in Barcelona we will have all the information below --}}
 {{#each arrayHotelInCity}}
 
-    <h2><a href="">Name: {{this.name}}</a></h2>
+    <h2><a href="/singleplace/{{this.name}}">Name: {{this.name}}</a></h2>
     <img src="{{this.img}}" alt="Photo of restaurant">
     <h4>Rating : {{this.rating}}</h4>
     <h4>Type  :  {{this.type}}</h4>
