--- a/CodeProject/views/singlePlace.hbs
+++ b/CodeProject/views/singlePlace.hbs
@@ -1,12 +1,31 @@
 <h2>Single place</h2>
 
 <p>Here is going to be on the details from a restaurant or museum orevent or hotel</p>
+
 <div>
 
     <h2>{{restaurant.[0].name}}</h2>
 
-
     <img src="{{restaurant.[0].img}}" alt="">
 
+    <h4>Type: {{restaurant.[0].type}} </h4>
+
+    <h4>Rating: {{restaurant.[0].rating}}</h4>
+
+    <h4>City: {{restaurant.[0].contact.address}} </h4>
+
+    <button class="favourite">Button to add favourites</button>
+
+    <h4><a href="{{resturant.[0].description}}">web</a></h4>
+    <p>Description : {{restaurant.[0].description}} </p>
+
+    {{#each restaurant.[0].comments}}
+    <div>
+        <p>Name: {{this.name}}</p>
+        <p>date: {{this.date}}</p>
+        <p>comment: {{this.comment}}</p>
+        <br>
+    </div>
+    {{/each}}
 
 </div>
