single place for restaurants

--- a/CodeProject/views/singlePlace.hbs
+++ b/CodeProject/views/singlePlace.hbs
@@ -16,7 +16,8 @@
 
     <button class="favourite">Button to add favourites</button>
 
-    <h4><a href="{{resturant.[0].description}}">web</a></h4>
+    <h4><a href="{{restaurant.[0].web}}">web</a></h4>
+    
     <p>Description : {{restaurant.[0].description}} </p>
 
     {{#each restaurant.[0].comments}}
