Makes Favorites for restaurants

--- a/CodeProject/views/private/profile.hbs
+++ b/CodeProject/views/private/profile.hbs
@@ -8,9 +8,10 @@
 </div>
 
 
-{{#each arrayFavourites }}
+{{!-- Restaurantes --}}
+{{#each arrayrestaurantsCity }}
 <div>
-    <img src="" alt="">
+    <img src="{{this.img}}" alt="">
     <p>{{this.name}}</p>
     <p>{{this.rating}}</p>
     <p>{{this.address}}</p>
