--- a/CodeProject/views/singlePlace.hbs
+++ b/CodeProject/views/singlePlace.hbs
@@ -14,7 +14,7 @@
 
     <h4>City: {{restaurant.[0].contact.address}} </h4>
 
-    <button class="favourite">Button to add favourites</button>
+    <button class="favourite" data-placeid="{{restaurant.[0]._id}}" >Button to add favourites</button>
 
     <h4><a href="{{restaurant.[0].web}}">web</a></h4>
     
