--- a/CodeProject/views/layout.hbs
+++ b/CodeProject/views/layout.hbs
@@ -26,5 +26,7 @@
     <p>Romero</p>
 
 </footer>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="/javascripts/main.js"></script>
   </body>
 </html>
