--- a/CodeProject/views/private/profile.hbs
+++ b/CodeProject/views/private/profile.hbs
@@ -18,3 +18,13 @@
     {{!-- like button of favorites --}}
 </div>
 {{/each}}
+
+{{#each arraymuseumsCity }}
+<div>
+    <img src="{{this.img}}" alt="">
+    <p>{{this.name}}</p>
+    <p>{{this.rating}}</p>
+    <p>{{this.address}}</p>
+    {{!-- like button of favorites --}}
+</div>
+{{/each}}
