--- a/CodeProject/views/singlePlace/restaurantDetail.hbs
+++ b/CodeProject/views/singlePlace/restaurantDetail.hbs
@@ -1,9 +1,5 @@
-<h2>Single place</h2>
-
-<p>Here is going to be on the details from a restaurant or museum orevent or hotel</p>
-
+{{!-- For restaurants --}}
 <div>
-
     <h2>{{restaurant.[0].name}}</h2>
 
     <img src="{{restaurant.[0].img}}" alt="">
@@ -14,10 +10,10 @@
 
     <h4>City: {{restaurant.[0].contact.address}} </h4>
 
-    <button class="favourite" data-placeid="{{restaurant.[0]._id}}" >Button to add favourites</button>
+    <button class="favourite" data-placeid="{{restaurant.[0]._id}}">Button to add favourites</button>
 
     <h4><a href="{{restaurant.[0].web}}">web</a></h4>
-    
+
     <p>Description : {{restaurant.[0].description}} </p>
 
     {{#each restaurant.[0].comments}}
