--- a/CodeProject/views/layout.hbs
+++ b/CodeProject/views/layout.hbs
@@ -17,6 +17,8 @@
       <li> <a href="/"> Home</a></li>
       <li><a href="auth/signup">Sign up</a></li>
       <li><a href="auth/login">Log in</a> </li>
+      <li><a href="auth/profile">Profile</a></li>
+      <li><a href="auth/logout">Log out</a></li>
     </ul>
   </nav>
 
