--- a/CodeProject/views/placeType.hbs
+++ b/CodeProject/views/placeType.hbs
@@ -10,9 +10,9 @@
 
     <h2><a href="/singleplace/Museum/{{this.name}}">Name: {{this.name}}</a></h2>
     <img src="{{this.img}}" alt="Photo of restaurant">
-    <h4>Rating : {{this.rating}}</h4>
-    <h4>Type: {{this.type}}</h4>
-    <h4>City: {{this.contact.address}}</h4>
+    <p>Rating : {{this.rating}}</p>
+    <p>Type: {{this.type}}</p>
+    <p>City: {{this.contact.address}}</p>
     <br>
 
     {{/each}}
@@ -22,7 +22,7 @@
     <div class="place-type-one">
         <img src="{{this.img}}" alt="Photo of restaurant">
         <div class="place-description">
-            <h4><a href="/singleplace/Barcelona/{{this.name}}">Name: {{this.name}}</a></h4>
+            <h2><a href="/singleplace/Barcelona/{{this.name}}">Name: {{this.name}}</a></h2>
             <p>Rating : {{this.rating}}</p>
             <p>Type cuisine : {{this.type}}</p>
             <p>City: {{this.contact.address}}</p>
@@ -35,9 +35,9 @@
 
     <h2><a href="/singleplace/Event/{{this.name}}">Name: {{this.name}}</a></h2>
     <img src="{{this.img}}" alt="Photo of restaurant">
-    <h4>Rating : {{this.rating}}</h4>
-    <h4>Type: {{this.type}}</h4>
-    <h4>City: {{this.contact.address}}</h4>
+    <p>Rating : {{this.rating}}</p>
+    <p>Type: {{this.type}}</p>
+    <p>City: {{this.contact.address}}</p>
     <br>
 
     {{/each}}
@@ -47,9 +47,9 @@
 
     <h2><a href="/singleplace/Hotel/{{this.name}}">Name: {{this.name}}</a></h2>
     <img src="{{this.img}}" alt="Photo of restaurant">
-    <h4>Rating : {{this.rating}}</h4>
-    <h4>Type : {{this.type}}</h4>
-    <h4>City: {{this.contact.address}}</h4>
+    <p>Rating : {{this.rating}}</p>
+    <p>Type : {{this.type}}</p>
+    <p>City: {{this.contact.address}}</p>
     <br>
 
     {{/each}}
