--- a/CodeProject/views/placeType.hbs
+++ b/CodeProject/views/placeType.hbs
@@ -10,7 +10,7 @@
 
     <h2><a href="/singleplace/Museum/{{this.name}}">Name: {{this.name}}</a></h2>
     <img src="{{this.img}}" alt="Photo of restaurant">
-    <p>Rating : {{this.rating}}</p>
+    <p>Rating: {{this.rating}}</p>
     <p>Type: {{this.type}}</p>
     <p>City: {{this.contact.address}}</p>
     <br>
@@ -23,8 +23,8 @@
         <img src="{{this.img}}" alt="Photo of restaurant">
         <div class="place-description">
             <h2><a href="/singleplace/Barcelona/{{this.name}}">Name: {{this.name}}</a></h2>
-            <p>Rating : {{this.rating}}</p>
-            <p>Type cuisine : {{this.type}}</p>
+            <p>Rating: {{this.rating}}</p>
+            <p>Type: {{this.type}}</p>
             <p>City: {{this.contact.address}}</p>
             <br>
         </div>
