--- a/CodeProject/views/singlePlace/restaurantDetail.hbs
+++ b/CodeProject/views/singlePlace/restaurantDetail.hbs
@@ -1,5 +1,5 @@
 {{!-- For restaurants --}}
-<div>
+<div class="single-place-wrapper">
     <h2>{{restaurant.[0].name}}</h2>
 
     <img src="{{restaurant.[0].img}}" alt="">
@@ -10,14 +10,15 @@
 
     <h4>City: {{restaurant.[0].contact.address}} </h4>
 
-    <button class="favourite" data-placeid="{{restaurant.[0]._id}}">Button to add favourites</button>
+    <button class="favourite" data-placeid="{{restaurant.[0]._id}}">Add to favourites</button>
 
-    <h4><a href="{{restaurant.[0].web}}">web</a></h4>
+    <h5><a href="{{restaurant.[0].web}}">website</a></h4>
 
     <p>Description : {{restaurant.[0].description}} </p>
 
     {{#each restaurant.[0].comments}}
     <div>
+        <h4>Comments:</h4>
         <p>Name: {{this.name}}</p>
         <p>date: {{this.date}}</p>
         <p>comment: {{this.comment}}</p>
