--- a/CodeProject/views/index.hbs
+++ b/CodeProject/views/index.hbs
@@ -8,7 +8,7 @@
 
     {{#each allCitiesFromDB}}
     <li>
-        <a href="city/{{this.name}}">{{this.name}}</a>
+        <a href="city/{{this.name}}" class="{{this.name}}">{{this.name}}</a>
     </li>
     {{/each}}
 
