--- a/CodeProject/views/private/profile.hbs
+++ b/CodeProject/views/private/profile.hbs
@@ -9,7 +9,7 @@
 
 
 {{!-- Restaurantes --}}
-{{#each arrayrestaurantsCity }}
+{{#each allFavs }}
 <div>
     <img src="{{this.img}}" alt="">
     <p>{{this.name}}</p>
@@ -18,6 +18,7 @@
     {{!-- like button of favorites --}}
 </div>
 {{/each}}
+
 
 {{#each arraymuseumsCity }}
 <div>
