make edit profile

--- a/CodeProject/views/index.hbs
+++ b/CodeProject/views/index.hbs
@@ -1,6 +1,7 @@
 <div class="home-search">
     <h2>Make your stay Easier</h2>
-    <input type="text" name="search">
+    {{!-- <input type="text" name="search"> --}}
+    <div><h3>Put an image I think</h3></div>
     <br>
 </div>
 
