--- a/CodeProject/views/private/profile.hbs
+++ b/CodeProject/views/private/profile.hbs
@@ -7,6 +7,7 @@
     <p>Your favorites:</p>
 </div>
 
+<button class="edit-profile"> Edit Profile </button>
 
 {{!-- Restaurantes --}}
 {{#each allFavs }}
