update edit Profile

--- a/CodeProject/views/private/profile.hbs
+++ b/CodeProject/views/private/profile.hbs
@@ -2,8 +2,7 @@
 
 <div class="profile">
     <img src="" alt="">
-    <h2>Welcome</h2>
-    <h3>{{this.username}}</h3>
+    <h2>Welcome : {{user.username}}</h2>
     <p>Your favorites:</p>
 </div>
 
