add style meta view

--- a/CodeProject/public/stylesheets/style.css
+++ b/CodeProject/public/stylesheets/style.css
@@ -52,7 +52,7 @@ footer p {
 .list-cities li {
   /* 4 rem */
   font-size: 7rem;
-  color: blue;
+  color: aliceblue;
   font-weight: bold;
   text-align: center;
   text-decoration: none;
