--- a/CodeProject/views/private/profile.hbs
+++ b/CodeProject/views/private/profile.hbs
@@ -8,6 +8,8 @@
 
 <button class="edit-profile"> Edit Profile </button>
 
+
+
 {{!-- Restaurantes --}}
 {{#each allFavs }}
 <div>
@@ -18,6 +20,7 @@
         <p>Type: {{this.address}}</p>
         {{!-- like button of favorites --}}
     </div>
+    <button class="remove-favorite" data-placeid="{{this._id}}"> Remove favourite </button>
 </div>
 {{/each}}
 
