--- a/CodeProject/views/layout.hbs
+++ b/CodeProject/views/layout.hbs
@@ -5,7 +5,7 @@
   <title>{{title}}</title>
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width-device-width", initial-scale="1", shrink-to-fit="no">
+  <meta name="viewport" content="width-device-width" , initial-scale="1" , shrink-to-fit="no">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,10 +16,18 @@
     <h2>CityEasier</h2>
     <ul>
       <li> <a href="/"> Home</a></li>
+
       <li><a href="auth/signup">Sign up</a></li>
       <li><a href="auth/login">Log in</a> </li>
+
+
+      {{!-- {{#if req.session.id} --}}
+      {{!-- {{#if user}} --}}
       <li><a href="auth/profile">Profile</a></li>
       <li><a href="auth/logout">Log out</a></li>
+      {{!-- {{/if}} --}}
+      {{!-- {{/if}} --}}
+
     </ul>
   </nav>
 
@@ -39,5 +47,6 @@
 </footer>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/javascripts/main.js"></script>
-  </body>
+</body>
+
 </html>
