--- a/CodeProject/views/private/profile.hbs
+++ b/CodeProject/views/private/profile.hbs
@@ -2,8 +2,8 @@
 
 <div class="profile">
     <img src="" alt="">
-    <h2>Welcome : {{user.username}}</h2>
-    <p>Your favorites:</p>
+    <h2>Welcome : {{username}} </h2>
+    <p>Your favorites: </p>
 </div>
 
 <button class="edit-profile"> Edit Profile </button>
