--- a/CodeProject/views/private/profile.hbs
+++ b/CodeProject/views/private/profile.hbs
@@ -25,7 +25,7 @@
 {{/each}}
 
 
-{{#each arraymuseumsCity }}
+{{!-- {{#each arraymuseumsCity }}
 <div class="place-type-one">
     <img src="{{this.img}}" alt="">
     <div class="place-description">
@@ -35,4 +35,4 @@
         {{!-- like button of favorites --}}
     </div>
 </div>
-{{/each}}
+{{/each}} --}}
