--- a/CodeProject/views/index.hbs
+++ b/CodeProject/views/index.hbs
@@ -1,8 +1,8 @@
 <div class="home-search">
-    <h2>Make your stay Easier</h2>
+    <h3>Make your stay Easier</h3>
     {{!-- <input type="text" name="search"> --}}
-    <div><h3>Put an image I think</h3></div>
-    <br>
+    {{!-- <div><h3>Put an image I think</h3></div> --}}
+    <hr>
 </div>
 
 <div class="list-cities">
