--- a/CodeProject/public/stylesheets/style.css
+++ b/CodeProject/public/stylesheets/style.css
@@ -1,5 +1,6 @@
 * {
   padding: 0;
+
   border: 0;
   box-sizing: border-box;
 }
@@ -16,14 +17,10 @@ body {
   background-color: #94d2ff;
 }
 
-a {
-  color: aliceblue;
-  /* color: #00b7ff; */
-}
-
 html,
 body {
   height: 100%;
+  margin: 0;
 }
 
 /* #wrap {
@@ -42,48 +39,85 @@ button {
 
 /* logo from layout*/
 
-.site-nav {
-  text-align: center;
-  height: 5em;
-  width: 100%;
-  background-color: #cc504e;
-}
-.site-nav h2 {
+h2.logo {
   font-family: "Acme", sans-serif;
-  font-size: 3em;
+  font-size: 3.5em;
   color: #b3b33d;
-  margin: 0.5rem auto;
+  margin: 0 auto;
+  text-align: center;
 }
-.nav {
+
+.site-nav {
   display: flex;
   justify-content: flex-end;
-  align-content: flex-end;
+  align-items: center;
   padding: 10px;
+  box-sizing: border-box;
+  height: 20px;
+  width: 100%;
+  background: #cc504e;
 }
-.nav-trigger {
+
+.side-menu-trigger {
   border: 0;
   border-radius: 5px;
-  background-color: #fff;
+  background: #ffffff;
 }
-.menu {
+
+.side-menu {
   display: flex;
-  position: absolute;
-  top: 5em; /*site-nav height*/
-  right: 0;
+  box-sizing: border-box;
+  position: fixed;
   height: 100%;
-  width: 70vw;
-  background-color: #B34F4D;
+  width: 300px;
+  top: 20px;
+  right: 0;
+  transform: translateX(300px);
+  padding: 0;
+  background: #34b399;
+  transition: 0.3s transform ease-in-out;
 }
-.menu ul {
+
+.side-menu ul {
+  position: absolute;
+  display: flex;
+  height: calc(100% - 20px);
+  flex-wrap: wrap;
+  margin: 0 10px;
   padding: 0;
   list-style-type: none;
-  margin: 0 10px;
+  align-content: flex-start;
+}
+
+.side-menu ul li {
   display: flex;
-  flex-wrap: wrap;
+  height: 30px;
+  background: #ffffff;
+  flex-basis: 100%;
+  margin-top: 20px;
+  color: #696e9e;
+  border-radius: 5px;
+  overflow: hidden;
 }
-.menu li {
-  
+
+.side-menu ul li a {
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  text-decoration: none;
+  box-sizing: border-box;
 }
+
+.open {
+  transform: translateX(0px);
+}
+/* .side-menu-trigger:focus ~ .side-menu,
+.side-menu:hover {
+  transform: translateX(0px);
+} */
 
 /*footer layout*/
 footer p {
@@ -100,33 +134,11 @@ footer p {
   /* height: 50vh; */
 }
 
-.list-cities li {
-  /* 4 rem */
-  font-size: 7rem;
-  color: aliceblue;
-  font-weight: bold;
-  text-align: center;
-  text-decoration: none;
-  list-style: none;
-  /* 2rem */
-  padding: 3rem 4rem;
-  border-bottom: 2px solid blue;
-}
-
-.list-cities li a {
-  margin: 3rem auto;
-  /* padding: 3rem; */
-}
-
-.list-cities li a:hover {
-  color: orange;
-  text-decoration: none;
-}
-
 .Barcelona {
   background-image: url("https://tifositours.com/wp-content/uploads/2019/02/Barcelona.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   padding: 30px;
 }
 
@@ -134,6 +146,7 @@ footer p {
   background-image: url("https://miro.medium.com/max/699/1*2mzNSMIfrd-v6Wzoz1XPhw.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   padding: 30px;
 }
 
@@ -141,17 +154,42 @@ footer p {
   background-image: url("https://86087-590828-raikfcquaxqncofqfm.stackpathdns.com/wp-content/uploads/2016/01/paris-fin-de-semana-1024x683.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 30px;
+  background-position: center;
+  padding: 10px 20px;
+}
+
+.list-cities li {
+  /* 4 rem */
+  font-size: 2.5rem;
+  color: aliceblue;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  list-style: none;
+  /* 2rem */
+  padding: 1rem 1rem;
+  border-bottom: 5px solid #94d2ff;
+}
+
+.list-cities li a {
+  margin: 0 auto;
+  padding: 1rem;
+  color: aliceblue;
+}
+
+.list-cities li a:hover {
+  color: orange;
+  text-decoration: none;
 }
 
 .home-search {
   font-size: 2.6rem;
   text-align: center;
-  padding: 3rem 5rem;
+  padding: 1rem;
 }
 
 .home-search h2 {
-  margin: 5rem auto;
+  margin: 2rem auto;
 }
 
 .home-search input {
