--- a/CodeProject/views/index.hbs
+++ b/CodeProject/views/index.hbs
@@ -1,15 +1,17 @@
 <div class="home-search">
     <h2>Make your stay Easier</h2>
     {{!-- <input type="text" name="search"> --}}
-    <div><h3>Put an image I think</h3></div>
+    <div>
+        <h3>Put an image I think</h3>
+    </div>
     <br>
 </div>
 
 <div class="list-cities">
 
     {{#each allCitiesFromDB}}
-    <li>
-        <a href="city/{{this.name}}" class="{{this.name}}">{{this.name}}</a>
+    <li class="{{this.name}}">
+        <a href="city/{{this.name}}">{{this.name}}</a>
     </li>
     {{/each}}
 
